<resources>
    <string name="app_name">Interval Training</string>
    <string name="statistics">Statistics</string>
    <string name="alarm">Alarms</string>
    <string name="training">Training</string>
    <string name="pause_activity">Pause</string>
    <string name="resume_activity">Resume</string>
    <string name="stop_activity">Stop</string>
    <string name="notification_weekday">Weekday</string>
    <string name="notification_time" translatable="false">12:00</string>
    <string name="interval_timer_default" translatable="false">--:--:-</string>
    <string name="activity_timer_default" translatable="false">--:--</string>
    <string name="activity_type_walk">Walk</string>
    <string name="activity_type_run">Run</string>
    <string name="training_scheduled_notification">It is time for your training!</string>
    <string name="training_notification_channel_name">Training reminder</string>
    <string name="progress_notification_channel_name">Progress</string>
    <string name="workout_distance_unit" translatable="false">km</string>
    <string name="workout_speed_unit" translatable="false">/km</string>\
    <string name="workout_distance_default" translatable="false">0.000</string>
    <string name="workout_speed_default" translatable="false">--:--</string>
    <string name="stats_total_distance_km">Total distance</string>
    <string name="stats_total_time">Total Time</string>
    <string name="stats_default_total_time" translatable="false">00:00:00</string>
    <string name="stats_total_distance_default" translatable="false">0 km</string>
    <string name="minutes_seconds_default" translatable="false">00:00</string>
    <string name="interval_duration">Interval duration</string>
    <string name="start_run_button">Start training</string>
    <string name="active_time_title">Workout duration</string>
    <string name="run_interval_length_hint">Run</string>
    <string name="walk_interval_length_hint">Walk</string>
    <string name="stop_activity_title">Stop training?</string>
    <string name="stop_activity_message">This will cause the current session to be discarded.</string>
    <string name="discard_workout_title">Discard workout?</string>
    <string name="discard_workout_message">Workout will not be saved!</string>
    <string name="confirm_cancel">Yes</string>
    <string name="confirm_continue">No</string>
    <string name="current_workout_step_file_key" translatable="false">current_workout_step</string>
    <string name="workout_level">Workout level</string>
    <string name="workout_step_default" translatable="false">1</string>
    <string name="interval_timer_hint">Interval timer</string>
    <string name="warmup_title">Warmup</string>
    <string name="activities">Journal</string>
    <string name="increase_workout_level">Increase</string>
    <string name="maintain_workout_level">Maintain</string>
    <string name="reduce_workout_level">Reduce</string>
    <string name="workout_level_dialog_title">What do you want to do with the workout level?</string>
    <string name="workout_level_dialog_message">Your workout was below the recommended precision, which may be caused by low location accuracy of your device.</string>
    <string name="weekly_progress_notification_title">Your weekly progress</string>
    <string name="location_permission_prompt">To track your workout, you need to accept location permissions.</string>
    <string name="background_location_permission_prompt">To track you workout with a locked screen, you must accept background location permissions.</string>
    <string name="snackbar_activity_saved">Activity saved successfully!</string>
    <string name="chart_run_precision_label">Run precision</string>
    <string name="chart_walk_precision_label">Walk precision</string>
    <string name="chart_achieved_pace_label">Achieved pace</string>
    <string name="chart_required_pace_label">Required pace</string>
    <string name="chart_good_precision_limit">Good precision</string>
    <string name="snackbar_progress_reminder_set">Progress reminder set</string>
    <string name="chart_distance">Distance</string>
    <string name="chart_walk_length">Walk length</string>
    <string name="chart_run_length">Run length</string>
    <string name="levels_completed">Levels completed</string>
    <string name="levels_completed_placeholder" translatable="false">0/35</string>
    <string name="progress_notification">Progress notifications</string>
    <string name="active_time">Active time</string>
    <string name="precision">Precision</string>
    <string name="no_activities_yet">No activities yet</string>
    <string name="activities_empty_desc">Train and save the activities to browse them here.</string>
    <string name="train_button_empty_activities">Train</string>
    <string name="map_of_the_activity">Map of the activity</string>
    <string name="save_fab">Save</string>
    <string name="discard_fab">Discard</string>
    <string name="distance_placeholder" translatable="false">0</string>
    <string name="distance_unit" translatable="false">km</string>
    <string name="pace_placeholder" translatable="false">--:--</string>
    <string name="pace_unit" translatable="false">/km</string>
    <string name="precision_placeholder" translatable="false">0%</string>
    <string name="map_iv_activity_path">Activity path</string>
    <string name="activity_time_placeholder" translatable="false">--:--</string>
    <string name="date_placeholder" translatable="false">weekday, 01 month 1970, 00:00</string>
    <string name="completed_levels_out_of_all_levels" translatable="false">%d/%d</string>
    <string name="notification_did_not_train">You did not train this week! Train 3 times per week!</string>
    <string name="notification_training_recommendation_met">You met the recommendations for the number of training days this week.</string>
    <string name="notification_training_recommendation_not_met">It is recommended that you train 3 times per week! (%d/3)</string>
    <string name="notification_training_recommendation_exceeded">It is recommended to train 3 times per week - more than that increases the chance of injury! (%d/3)</string>
    <string name="stats_empty_subtitle">Train and save the activities to browse the generated statistics here.</string>
    <string name="stats_empty_title">No statistics</string>
    <string name="pie_chart_center">Duration of</string>
    <string name="pie_chart_walking">walking</string>
    <string name="pie_chart_running">running</string>
    <string name="levels">Levels</string>
    <string name="levels_item_number" translatable="false">#</string>
    <string name="levels_time_default" translatable="false">00:30</string>
    <string name="levels_workout_duration">Workout duration</string>
    <string name="levels_run_duration">Run duration</string>
    <string name="levels_walk_duration">Walk duration</string>
    <string name="pace">Pace</string>
    <string name="levels_run">Run</string>
    <string name="levels_walk">Walk</string>
    <string name="run_start_run">Run</string>
    <string name="run_start_walk">Walk</string>
    <string name="levels_warmup">Warmup</string>
    <string name="training_reminder_notification_channel_name">Training reminder</string>
    <string name="progress_channel_name">Progress</string>
    <string name="notification_goal_completed_0_percent">Hey, don\'t discourage yourself - YOU can do this! %d%% of workout levels completed.</string>
    <string name="notification_goal_completed_1_to_29_percent">Keep training! %d%% of the goal achieved.</string>
    <string name="notification_goal_completed_30_to_39_percent">Dream on, dream on, dream until the dream come true! %d%% of workout levels completed.</string>
    <string name="notification_goal_completed_40_to_49_percent">Work it, make it, do it, makes us harder, better, faster, stronger! %d%% of workout levels completed.</string>
    <string name="notification_goal_completed_50_to_59_percent">Whoa, you\'re half way there, whoa-oh, livin\' on a prayer! %d%% of workout levels completed.</string>
    <string name="notification_goal_completed_60_to_79_percent">You\'re still standing, after all this time! %d%% of workout levels completed.</string>
    <string name="notification_goal_completed_80_to_99_percent">You\'re gonna go, go, go, there\'s no stopping you! %d%% of workout levels completed.</string>
    <string name="notification_goal_completed_100_percent">You are the champion, my friend! Congratulations, you\'ve completed %d%% of workout levels!</string>
    <string name="activity_has_ended">Training completed</string>
    <string name="activity_resume_running">Continue running</string>
    <string name="activity_resume_walking">Continue walking</string>
    <string name="snackbar_reminder_enabled">Training reminder enabled - %s, %02d:%02d</string>
    <string name="map_is_loading">Map is loading ...</string>
    <string name="read_storage_permission">To view map of activity, you need to accept read storage permission</string>
</resources>