<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/training_notification_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_view_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivRunItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/map_iv_activity_path" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_view_constraint_layout_run_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivRunItem">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerImageView"
                android:layout_marginTop="0dp"
                app:dividerInsetStart="8dp"
                app:dividerInsetEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/progressLeftVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/progressMiddleVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/progressRightVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/activity_time_placeholder"
                android:textColor="@color/black_active"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="monospace"
                app:layout_constraintStart_toStartOf="@id/card_view_constraint_layout_run_item"
                app:layout_constraintEnd_toEndOf="@id/progressLeftVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/dividerImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLengthTitle"
                android:layout_width="0dp"
                android:maxLines="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/active_time"
                android:textColor="@color/black_inactive"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/progressLeftVerticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLength"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/distance_placeholder"
                android:textColor="@color/black_active"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="monospace"
                app:layout_constraintEnd_toStartOf="@+id/progressMiddleVerticalGuideline"
                app:layout_constraintStart_toStartOf="@id/progressLeftVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/dividerImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDistanceTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/distance_unit"
                android:textColor="@color/black_inactive"
                android:textSize="12sp"

                app:layout_constraintBottom_toBottomOf="@+id/tvLengthTitle"
                app:layout_constraintEnd_toStartOf="@+id/progressMiddleVerticalGuideline"
                app:layout_constraintStart_toEndOf="@+id/progressLeftVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvDistance" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:dividerInsetEnd="8dp"
                app:dividerInsetStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvLengthTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAvgSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/pace_placeholder"
                android:textColor="@color/black_active"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="monospace"
                app:layout_constraintEnd_toStartOf="@+id/progressRightVerticalGuideline"
                app:layout_constraintStart_toStartOf="@+id/progressMiddleVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/dividerImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAvgSpeedTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pace_unit"
                android:textColor="@color/black_inactive"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLengthTitle"
                app:layout_constraintEnd_toStartOf="@+id/progressRightVerticalGuideline"
                app:layout_constraintStart_toStartOf="@+id/progressMiddleVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvAvgSpeed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/precision_placeholder"
                android:textColor="@color/black_active"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="@id/card_view_constraint_layout_run_item"
                app:layout_constraintStart_toStartOf="@+id/progressRightVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/dividerImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRatingTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/precision"
                android:textColor="@color/black_inactive"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLengthTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/progressRightVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvRating" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDateRunItem"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:gravity="center_vertical"
                android:text="@string/date_placeholder"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black_inactive"
                android:textSize="12sp"
                android:textStyle="normal"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>