<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistanceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_distance_km"
        android:textColor="@color/black_inactive"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/tvWalkTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvWalkTime"
        app:layout_constraintTop_toBottomOf="@id/tvWalkTime" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWalkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_distance_default"
        android:textSize="24sp"
        android:textColor="@color/black_active"
        android:typeface="monospace"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider_from_line_chart_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_time"
        android:textColor="@color/black_inactive"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/tvRunTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvRunTime"
        app:layout_constraintTop_toBottomOf="@id/tvRunTime" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRunTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_default_total_time"
        android:textSize="24sp"
        android:textColor="@color/black_active"
        android:typeface="monospace"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider_from_line_chart_progress"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/runTimePieChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/divider_from_line_chart_progress"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toBottomOf="@id/runTimePieChart"
        android:background="?android:attr/listDivider"/>

</androidx.constraintlayout.widget.ConstraintLayout>