<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressLeftVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressRightVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/combinedProgressChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progressHorizontalGuideline"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistanceInfo"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/stats_total_distance_km"
        android:textColor="@color/black_inactive"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progressRightVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvWalkIntervalLength" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWalkIntervalLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_distance_default"
        android:textSize="16sp"
        android:textColor="@color/black_active"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/progressHorizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progressRightVerticalGuideline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTimeInfo"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/stats_total_time"
        android:textColor="@color/black_inactive"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/progressLeftVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRunIntervalLength" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRunIntervalLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_default_total_time"
        android:textSize="16sp"
        android:textColor="@color/black_active"
        android:typeface="normal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/progressHorizontalGuideline"
        app:layout_constraintEnd_toStartOf="@+id/progressLeftVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGoalProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levels_completed_placeholder"
        android:textSize="16sp"
        android:textColor="@color/black_active"
        android:typeface="normal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/progressHorizontalGuideline"
        app:layout_constraintEnd_toStartOf="@+id/progressRightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@+id/progressLeftVerticalGuideline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCurrentWorkoutInfo"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint=""
        android:text="@string/levels_completed"
        android:textColor="@color/black_inactive"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/progressRightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@+id/progressLeftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvGoalProgress" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvWeeklyNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:cardElevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/tvTotalTimeInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clWeeklyNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNotificationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_notification"
                android:textColor="@color/black_inactive"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProgressNotificationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="12:00"
                android:gravity="center"
                android:textColor="@color/black_inactive"
                android:textSize="32sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/materialDayPickerProgressNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProgressNotificationTime"
                app:selectionMode="ca.antonious.materialdaypicker.SingleSelectionMode" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/ivRunEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:visibility="invisible"
        android:src="@drawable/ic_bar_chart_graph_svgrepo_com"
        app:layout_constraintBottom_toTopOf="@+id/tvEmptyStatsTitle"
        app:layout_constraintEnd_toStartOf="@id/guidelineRightStats"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftStats"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmptyStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/stats_empty_title"
        android:textColor="@color/black_active"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvCurrentWorkoutInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmptyStatsSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/stats_empty_subtitle"
        android:textSize="14sp"
        android:visibility="invisible"

        app:layout_constraintEnd_toStartOf="@+id/guidelineRightStats"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftStats"
        app:layout_constraintTop_toBottomOf="@+id/tvEmptyStatsTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>